--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  width: 30vw;
+  padding: 10px;
+  margin: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table{
+  width: 100%;
+  padding: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.removeBtn{
+  background-color: rgb(233, 136, 136);
   color: white;
+  border: 1px solid rgb(118, 118, 118);
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+td,th{
+  padding: 7px;
+  margin: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons{
+  margin: 10px;
+}
+span{
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid gray;
+  background-color: azure;
 }
